--- a/Articles/VECM/Introduction.org
+++ b/Articles/VECM/Introduction.org
@@ -27,13 +27,13 @@ More recently, other expenditures have been scrutinized under the demand-led gro
 However, few studies focus on the role of residential investment in particular cite:petrini_2021_TD.
 
 We argue that the scarce attention that residential investment receives is not compatible with its macroeconomic relevance.
-Besides the recent interest in the macroeconomic consequences of residential investment to the business cycle and long-run economic growth cite:fiebiger_trend_2017,fiebiger_semi-autonomous_2018,perez_Montiel_2021, there are some controversies about its determinants.
+Besides the recent interest in the macroeconomic consequences of residential investment to the business cycle and long-run economic growth cite:fiebiger_trend_2017,fiebiger_semi-autonomous_2018,perez_Montiel_2021, there is not a consensus about its determinants.
 
-Our main objective is to present and evaluate a parsimonious way of explaining the behavior of the rate of growth of residential investment, focusing on the US case.
+Our main objective is to present and evaluate a parsimonious way of explaining the behavior of the rate of growth of residential investment, focusing on the US case (1992-2019).
 We will base this explanation on a single index that combines two relevant variables of the housing market: mortgages rate of interest and house price inflation.
 In Section ref:sec:Stylized_Facts, we discuss the macroeconomic relevance of residential investment regarding the US case.
-Next, in Section ref:sec:empirical_review, we review works that estimates the determinants of residential investment determinants.
+Next, in Section ref:sec:empirical_review, we review works that estimates the determinants of residential investment.
 In Section ref:sec:VECM, we estimate a bi-variate vector error-correction model (VECM) using time-series data for the US economy from 1992 to 2019.
 Section ref:sec:Conclusion concludes the paper.
-The results of our investigation indicate the relevance of the proposed index in explaining the dynamics of the growth of rate of residential investment.
+The results of our investigation indicate the relevance of the proposed index in explaining the dynamics of the growth rate of residential investment.
 Appendix ref:appen:A provides results for all statistical tests and for the robustness check.
