--- a/Articles/VECM/VECM.org
+++ b/Articles/VECM/VECM.org
@@ -4063,7 +4063,7 @@ However, they report statistically insignificant coefficients for mortgages nomi
 * VECM :ignore:
 
 ** Houses own-rate of interest and residential investment growth rate in the US Economy
-#+LATEX: \label{sc:own} 
+#+LATEX: \label{sec:own}
 
 From the previous section, we conclude that house prices (nominal or deflated by consumer price index) and some rate of interest (mortgage or long term, as proxy) may be the only consensus about residential investment determinants.
 In this section, we present a particular and parsimonious way of combining those two variables  in a single index that we will use on our econometric estimation.
@@ -4080,15 +4080,10 @@ own =  \left(\frac{1+r_{mo}}{1+\pi} - 1\right)
 Equation ref:txpropria represents this particular real interest rate which is the combination of the relevant nominal rate of interest with the relevant prince index for the one acquiring a new house.
 It is the real cost in houses from buying houses  \cite[p.~53]{teixeira_crescimento_2015}.
 The lower the house own-rate of interest, the greater the rate of growth of residential investment ($g_{I_{h}}$, see Figure ref:propria_investo).
+We do not assume that houses own-rate of interest is the only determinant of residential investment.
+While they share a negative correlation in the short run, there are long term determinants of residential investment such as demographic factors, urbanization, credit policy, among others.
 
-Equation ref:gihown presents this relation in a simple as possible functional form:
-#+begin_export latex
-\begin{equation}
-\label{gihown}
-g_{I_h} = \phi_0 - \phi_1\cdot own
-\end{equation}
-#+end_export
-where $\phi_0$ includes factors which vary more slowly than house prices (/e.g./ demographic factors, housing and credit policies, etc.) while $\phi_1$ captures the price-interest rate sensibility of demand for houses.
+# Based on this discussion we assume that residential investment has a long term trend associate do demographic factors, urbanization and credit policy, while, in the short run, it shows a negative relation with houses own-rate of interest
 # Additionally, the latter parameter also include the residential investment demand arising from expectations of capital gains resulting from speculation with the existing houses stock.
 # During a housing bubble period (/e.g./ 2002-5 in the US), it is house price inflation that governs houses own-rate of interest.
 # So, the lower this rate is, the greater the capital gains (in house) for speculating with house will be.
@@ -4104,9 +4099,9 @@ where $\phi_0$ includes factors which vary more slowly than house prices (/e.g./
 \end{figure}
 #+end_export
 
-Despite shedding light on connection between house prices, mortgage interest rate and residential investment, \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition has not been evaluated econometrically.
+Despite shedding light on the connection between house prices, mortgage interest rate and residential investment, \citeauthor*{teixeira_crescimento_2015}'s \citeyear{teixeira_crescimento_2015} proposition has not been evaluated econometrically.
 More recently, textcite:petrini_2021_TD simulated a Stock-Flow Consistent model for the US in which the rate of growth residential investment is governed by houses own-rate of interest.
-In their demand-led model, this expenditure leads business cycles and its is capable of replicating some of the stylized facts presented in Section ref:sec:Stylized_Facts.
+In their demand-led model, this expenditure leads growth and business cycles and it is capable of replicating some of the stylized facts presented in Section ref:sec:Stylized_Facts.
 In this sense, our work aims at empirically evaluating the relation between houses own-rate of interest and rate of growth of residential investment.
 
 
@@ -4114,8 +4109,8 @@ In this sense, our work aims at empirically evaluating the relation between hous
 #+LATEX: \label{sec:estimation}
 
 In this subsection we present the estimation estrategy and the data used to assess whether house own-rate of interest explains the behavior of residential investment rate of growth.
-Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes due to the Savings and Loans crisis of the 1980s (see Table ref:structbreak in appendix ref:appen:A for structural break tests)[fn::This institutional changes --- notably Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act  (FDICIA) in 1991 --- increased the credit volume to households. As a consequence, house finance has increased considerably in the following periods. For a discussion about the Savings and Loans crisis, see textcite:federal_deposit_insurance_corporation_savings_1997. ].
-We rely on the following  quarterly seasonally adjusted data[fn::All the date is from FRED database. The codes are MORTGAGE30US, PRFI, and CSUSHPISA respectively. We resampled all the non-quarterly data series by end of the quarter and define growth rate as percent change from the previous quarter.]: (i) 30-Year fixed mortgage interest rate, private residential investment and Case-Shiller home price index.
+Our sample period (1992:Q1 to 2019:Q1) starts after institutional changes due to the Savings and Loans crisis of the 1980s (see Table ref:structbreak in appendix ref:appen:A for structural break tests)[fn::In addition to the institucional changes mentioned in footnote @@latex: \footref{nota_instituicoes}@@, the Reform, Recovery, and Enforcement Act (FIRREA) in 1989 and Federal Deposit Insurance Corporation Improvement Act (FDICIA) in 1991 were important in increasing the credit volume to households. As a consequence, house finance has increased considerably in the following periods cite:wall_too_2010.].
+We rely on the following  quarterly seasonally adjusted data[fn::All the date is from FRED database. The codes are MORTGAGE30US, PRFI, and CSUSHPISA respectively. We resampled all the non-quarterly data series by end of the quarter and define growth rate as percent change from the previous quarter.]: (i) 30-year fixed mortgage interest rate, private residential investment and Case-Shiller home price index.
 # Additionally, we consider mortgage interest rate as an exogenous variable in all tests and estimations.
 
 
@@ -4123,15 +4118,16 @@ Since we are interested in growth rate variables, we apply textcite:yeo_new_2000
 This procedure is similar to textcite:box_analysis_1964 but more adequate in the presence of non-positive values.
 Then, we employ standard unit root tests (see Table ref:unitroot in appendix ref:appen:A) as well as textcite:johansen_estimation_1991 procedure to assess whether houses own-rate of interest and residential investment growth rate share a common long-run trend (see Table ref:Johansen in appendix ref:appen:A).
 At a 5% significance level, we conclude that the series are cointegrated, which allows us to estimate a error correction model cite:enders_applied_2014.
-In order to do so, we assume the following long-run relationship based on equation ref:gihown:
+In order to do so, we assume the following long-run relationship:
 
 #+BEGIN_latex
 \begin{equation}
 \label{gihLR}
-g_{I_{h_{t}}} = \phi_{0} - \phi_{1}\cdot own_{t}
+g_{I_{h_{t}}} = \phi_{0} + \phi_{1}\cdot own_{t}
 \end{equation}
 #+END_latex
-next, we specify the short-run adjustment process of Equation ref:gihLR as follows:
+where $\phi_0$ includes factors that we may consider as given (/e.g./ demographic factors, housing and credit policies, among other factors) while $\phi_1$ captures the price-interest rate sensibility of demand for new houses.
+Next, we specify the short-run adjustment process of Equation ref:gihLR as follows:
 
 #+begin_export latex
 \begin{equation}
@@ -4139,7 +4135,7 @@ next, we specify the short-run adjustment process of Equation ref:gihLR as follo
 \begin{bmatrix}
 \Delta own_{t}\\
 \Delta g_{I_{h_{t}}}
-\end{bmatrix} = \begin{bmatrix}\delta_{1}\\ \delta_{2}\end{bmatrix} + \begin{bmatrix}\alpha_{1}\\ \alpha_{2}\end{bmatrix} \begin{bmatrix}g_{I_{h_{t-1}}} - \phi_{0} + \phi_{1}\cdot own_{t-1}\\g_{I_{h_{t-1}}} - \phi_{0} + \phi_{1}\cdot own_{t-1}\end{bmatrix}^{\prime} + \sum^N_{i=1} \begin{bmatrix}\beta_{1,i} & \gamma_{1,i} \\\beta_{2,i} & \gamma_{2,i} \end{bmatrix} \begin{bmatrix}\Delta g_{I_{h_{t-i}}} \\\Delta own_{t-i}\end{bmatrix} + \varepsilon_{t}
+\end{bmatrix} = \begin{bmatrix}\delta_{1}\\ \delta_{2}\end{bmatrix} + \begin{bmatrix}\alpha_{1}\\ \alpha_{2}\end{bmatrix} \begin{bmatrix}g_{I_{h_{t-1}}} - \phi_{0} - \phi_{1,2}\cdot own_{t-1}\\g_{I_{h_{t-1}}} - \phi_{0} - \phi_{1,1}\cdot own_{t-1}\end{bmatrix}^{\prime} + \sum^N_{i=1} \begin{bmatrix}\beta_{1,i} & \gamma_{1,i} \\\beta_{2,i} & \gamma_{2,i} \end{bmatrix} \begin{bmatrix}\Delta g_{I_{h_{t-i}}} \\\Delta own_{t-i}\end{bmatrix} + \varepsilon_{t}
 \end{equation}
 #+end_export
 where $\delta$ indicate linear trend (level);
@@ -4150,8 +4146,8 @@ $\beta$ and $\gamma$ are coefficients associated with lagged $g_{I_h}$ and $own$
 Considering the simple functional form of Equation ref:gihLR and the adjustment process of Equation ref:matrix we present the expected results in Table ref:resultados_esperados.
 Once we report a cointegration relation between houses own-rate of interest and residential investment rate of growth, we expect that the residuals are stationary (hypothesis 1).
 We also expect that residential investment growth rate has a positive long-run trend not related to price effects (hypothesis 5) while houses own-rate of interest has a negative effect as discussed before (hypothesis 4).
-If  hypotheses 1, 4 and 5 are valid, houses own-rate of interest and residential investment rate of growth share a common negative long-run trend.
-Additionally, if houses own-rate of interest are able to explain the rate of growth of residential investment as equation ref:gihown describes it, its lagged coefficients ($\gamma_{2}$) should be negative and statistically significant (hypothesis 6).
+If  hypotheses 1, 4 and 5 are valid, houses own-rate of interest and residential investment rate of growth share a common long-run trend.
+As discussed in subsection ref:sec:own, lagged houses own-rate of interest coefficients in residential investment equation ($\gamma_{2,2}$) should be negative and statistically significant (hypothesis 6).
 
 
 \input{./tabs/hypothesis.tex}
@@ -4181,8 +4177,8 @@ Moreover, the construction of new houses takes time. According to the US Survey 
 Both houses construction time by contract or by the owner, on the other side, takes approximately 8-12 months to conclude.
 This provides more objective evidence for the relevance to residential investment of persistent change in own-rate of interest and for the use of lags in our model – more specifically, four lags.
 
-Considering this theoretical and econometric discussion of model order specification, we estimate a four lag VEC  (see Table ref:Estimacao).
-This lag order also generates homoscedastic residuals without serial auto-correlation (see Table ref:testes_resduos in Appendix ref:appen:A).
+Considering this theoretical and econometric discussion of model order specification, we estimate VEC with four lags  (see Table ref:Estimacao).
+This lag order generates homoscedastic residuals without serial auto-correlation (see Table ref:testes_resduos in Appendix ref:appen:A).
 We also report that our estimation is robust and not sensible to the lag order specification (see Table ref:tab:robust Appendix ref:appen:A for robustness check).
 On the following subsection, we analyze the results and compare with the theoretical expected ones presented in Table ref:resultados_esperados.
 
@@ -4198,16 +4194,8 @@ We also find statistically significant coefficients related to demand for houses
 On the other hand, the error correction parameter is statistically significant only for the residential investment growth rate equation.
 In this sense, $own$ is weakly exogenous compared to $g_{I_h}$ while houses own-rate of interest Granger-causes $g_{I_h}$, supporting the hypothesis (2) and (3).
 Since the forth lag of houses own-rate of interest is the only statiscally significantly one at 5% level, we also support hypothesis 7.
-In conclusion, our estimation results are in line with the expected ones and can be summarized as follows: houses own-rate of interest determines --- but is not determined by --- residential investment growth rate and these variables present a negative long-term relationship.
+In conclusion, our estimation results are in line with the expected ones and can be summarized as follows: houses own-rate of interest determines --- but is not determined by --- residential investment growth rate and these variables present a long-term relationship.
 
-#+begin_export latex
-\begin{table}[h!]
-	\caption{Estimation parameters}
-	\centering
-	\input{./tabs/parameters.tex}
-	\caption*{\textbf{Source:} Authors' elaboration}
-\end{table}
-#+end_export
 #+begin_export latex :exports none
 \begin{figure}
 	\centering
@@ -4250,17 +4238,17 @@ Therefore, houses own-rate of interest is explained mainly by itself and explain
 #+end_export
 
 
-Finally,  we contrast our findings with those discussed in Section ref:sec:empirical_review.
-At this stage, would be more adequate to restrict the comparison with the paper that estimates residential investment determinants as a function of some real mortgage interest rate after the institutional changes of the 90's.
-However, with this criteria, none of the revised papers would be elected.
-In this sense, we will reassess the discussion of the statistical significance between nominal and real mortgage interest rate.
-For the US case, textcite:fair_macroeconometric_2018 concludes that the nominal mortgage rate is more adequate since inflation variables "picks up" not included variables (such as expectations).
-We report opposites results since houses own-rate of interest are statistically significant and this is the case for a broad timespan (see Table ref:tab:robust in Appendix ref:appen:A).
-Thus, deflating mortgage interest rate by the relevant price index leads to different results.
+# Finally,  we contrast our findings with those discussed in Section ref:sec:empirical_review.
+# At this stage, would be more adequate to restrict the comparison with the paper that estimates residential investment determinants as a function of some real mortgage interest rate after the institutional changes of the 90's.
+# However, with this criteria, none of the revised papers would be elected.
+# In this sense, we will reassess the discussion of the statistical significance between nominal and real mortgage interest rate.
+# For the US case, textcite:fair_macroeconometric_2018 concludes that the nominal mortgage rate is more adequate since inflation variables "picks up" not included ones (such as expectations).
+# We report opposites results since houses own-rate of interest are statistically significant and this is the case for a broad timespan (see Table ref:tab:robust in Appendix ref:appen:A).
+# Thus, deflating mortgage interest rate by the relevant price index leads to different results.
 
 
 In summary, our estimation reports that houses own-rate of interest has a prominent role in explaining residential investment growth rate movements.
-Finally, it is worth noting that despite the amplitude of VEC order, our model is parsimonious considering the number of variables considered.
+It is worth noting that despite the amplitude of VEC order, our model is parsimonious considering the number of variables considered (see Table ref:tab:robust Appendix ref:appen:A).
 Thus, we conclude that our estimation depicts the determinants of residential investment growth rate satisfactorily given its parsimony.
 On the following section we present some concluding remarks.
 
