--- a/Articles/VECM/ref.bib
+++ b/Articles/VECM/ref.bib
@@ -7678,3 +7678,17 @@
                   2008 - U.S. growth, the housing market, and the
                   distribut.pdf:application/pdf;zezza2008.pdf:/home/gpetrini/Zotero/storage/JGRAZV5N/zezza2008.pdf:application/pdf}
 }
+
+@techreport{NBER_HP,
+ title = "Why You Should Never Use the Hodrick-Prescott Filter",
+ author = "Hamilton, James D",
+ institution = "National Bureau of Economic Research",
+ type = "Working Paper",
+ series = "Working Paper Series",
+ number = "23429",
+ year = "2017",
+ month = "May",
+ doi = {10.3386/w23429},
+ URL = "http://www.nber.org/papers/w23429",
+ abstract = {Here's why. (1) The HP filter produces series with spurious dynamic relations that have no basis in the underlying data-generating process.  (2) Filtered values at the end of the sample are very different from those in the middle, and are also characterized by spurious dynamics. (3) A statistical formalization of the problem typically produces values for the smoothing parameter vastly at odds with common practice, e.g., a value for λ far below 1600 for quarterly data.  (4) There's a better alternative. A regression of the variable at date t+h on the four most recent values as of date t offers a robust approach to detrending that achieves all the objectives sought by users of the HP filter with none of its drawbacks.},
+}
