--- a/Articles/VECM/tabs/EmpiricalMotivation.tex
+++ b/Articles/VECM/tabs/EmpiricalMotivation.tex
@@ -1,5 +1,5 @@
 % \begin{landscape}
-\begin{table}[htb]
+\begin{table}[H]
     \caption{Residential investment determinants in macroeconometric models}
     \label{tab:summary_models}
     \begin{threeparttable}
@@ -14,7 +14,7 @@
     \textcite{mccarthyMonetaryPolicyTransmission2002} & US (1975-1985 and 1986-2000) & EC-GMM & \makecell{$HP(+), CC(-), SINT(-),$\\$LAND(-), H(-)$} \\\hline
     % \textcite{barot_2002_House} & UK and Sweden (1970-1998) & EC model & $Q(+), RINT(-)$ \\\hline
     \textcite{gauger_residential_2003} & US (1959-79 and 1982-99) & VECM and Granger test & $M2, GDP(+), SINT(-), MR(-)$\\\hline
-    \textcite{arestis_residential_2015} & 17 OECD countries (1970-2013) & ARDL Model & \makecell{$RHP(+), RDY(-), MR(-),$\\$ Cr(+), UN(-)$}\\\hline
+    \textcite{arestis_residential_2015} & 17 OECD countries (1970-2013) & ARDL Model & \makecell{$RHP(+), RDY(-), LRINT(-),$\\$ Cr(+), UN(-)$}\\\hline
     \textcite{kohlscheen_2018_Residential} & 15 OECD countries (1970-2017) & OLS & \makecell{$Q(+), RHP(+), GDPc(+),$\\$ POP(+), NM(+), H(-)$} \\\hline
     \textcite{fair_macroeconometric_2018} & US (1954-2007 and 195-2015) & 2SOLS & \makecell{$AGs(\pm), RDY(+), H(-),$\\$ NMRA(-), NHW(+)$} \\\hline
     \hline
@@ -22,7 +22,7 @@
     % \end{tabular}
     % } %end resize
 
-    \footnotesize{\textbf{Notes:} Signs inside parenthesis indicates expected effects. \textcite{topel_1988_Housing} use housing starts as the dependent variable while \textcite{fair_macroeconometric_2018} devides all variables total population, including real residential investment ($RRI/POP$); all the other use residential investment ($RI$). \textbf{Covariates dictionary:} $RHP$ Real House Prices; $NCD$ Non-residential construction deflator; $W$ Real Construction Wage; $Cr$ Banking Credit; $HS$ Housing Starts; $HeP$ Hedonic Prices; $INT$ Interest Rates (non-specified); $INFLA$ Expected inflation; $TIME$ Median market time since the begin of construction; $RDY$ Real Disposable Income; $RINT$ Real Interest Rate; $PRIr$ Residential investment relative price; $PRSr$ Residential services relative prices; $HP$ House Prices; $CC$ Construction Costs; $SINT$ Short-term Interest Rate; $LAND$ Land Price; $H$ House Stock; $Q$ Adapted Tobin's Q for the housing sector; $RINT$ Real interest rate; $M2$ Monetary aggregates; $GDP$ Gross Domestic Product; $MR$ nominal mortgage interest rate; $UN$ Unemployment rate; $GDPc$ GDP per capita; $POP$ Population Density; $NM$ Net Migration rates (per 1000 population); $AGs$ population density with certain age; $NMRA$ nominal mortgage interest rate after tax; $NHW$ net real housing wealth.}
+    \footnotesize{\textbf{Notes:} Signs inside parenthesis indicates expected effects. \textcite{topel_1988_Housing} use housing starts as the dependent variable while \textcite{fair_macroeconometric_2018} devides all variables total population, including real residential investment ($RRI/POP$); all the other use residential investment ($RI$). \textbf{Covariates dictionary:} $RHP$ Real House Prices; $NCD$ Non-residential construction deflator; $W$ Real Construction Wage; $Cr$ Banking Credit; $HS$ Housing Starts; $HeP$ Hedonic Prices; $INT$ Interest Rates (non-specified); $INFLA$ Expected inflation; $TIME$ Median market time since the begin of construction; $RDY$ Real Disposable Income; $RINT$ Real Interest Rate; $LRINT$ Long term real Interest Rate; $PRIr$ Residential investment relative price; $PRSr$ Residential services relative prices; $HP$ House Prices; $CC$ Construction Costs; $SINT$ Short-term Interest Rate; $LAND$ Land Price; $H$ House Stock; $Q$ Adapted Tobin's Q for the housing sector; $RINT$ Real interest rate; $M2$ Monetary aggregates; $GDP$ Gross Domestic Product; $MR$ nominal mortgage interest rate; $UN$ Unemployment rate; $GDPc$ GDP per capita; $POP$ Population Density; $NM$ Net Migration rates (per 1000 population); $AGs$ population density with certain age; $NMRA$ nominal mortgage interest rate after tax; $NHW$ net real housing wealth.}
   \end{threeparttable}
     \caption*{\textbf{Source:} Authors' elaboration}
 \end{table}
